--- a/Linear-algebra/Lecture15.ipynb
+++ b/Linear-algebra/Lecture15.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 第十五讲 子空间投影\n",
     "\n",
-    "首先考虑二维空间上的投影情况，现有直线 $A$ 和向量 $b$，且$A, b \\in \\mathbb{R}^2$，作向量 $b$ 在直线 $A$ 上的**投影向量**（Projection Vector）$p$："
+    "首先考虑二维空间上的投影情况，现有直线 $A$ 和向量 $b$，且 $A, b \\in \\mathbb{R}^2$，作向量 $b$ 在直线 $A$ 上的**投影向量**（Projection Vector）$p$："
    ]
   },
   {
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "向量 $p$ 一定落在直线 $A$ 上，$a$ 可以看作一个一维的空间，取空间内的一组基向量 $a$，那么向量 $p$ 一定和 $a$ 成倍数关系，记作 $p = xa$。向量 $e$ 可以理解称误差向量（Error Vector），且 $e = b - p, e \\perp a$。因为向量 $e$ 垂直于向量 $a$，所以有 $$a^Te = 0 \\Rightarrow a^T(b - p) = 0 \\Rightarrow a^Tb = a^Tb \\Rightarrow a^Tb = a^Txa \\Rightarrow  a^Tb = xa^Ta \\Rightarrow x = \\frac{a^Tb}{a^Ta}$$\n",
+    "向量 $p$ 一定落在直线 $A$ 上，$A$ 可以看作一个一维的空间，取空间内的一组基向量 $a$，那么向量 $p$ 一定和 $a$ 成倍数关系，记作 $p = xa$。向量 $e$ 可以理解称误差向量（Error Vector），且 $e = b - p, e \\perp a$。因为向量 $e$ 垂直于向量 $a$，所以有 $$a^Te = 0 \\Rightarrow a^T(b - p) = 0 \\Rightarrow a^Tb = a^Tb \\Rightarrow a^Tb = a^Txa \\Rightarrow  a^Tb = xa^Ta \\Rightarrow x = \\frac{a^Tb}{a^Ta}$$\n",
     "\n",
     "因为 $p = xa = a\\frac{a^Tb}{a^Ta} = \\frac{aa^T}{a^Ta}b$，由此引入**投影矩阵**（Projection Matrix），记作 $P$， $P = \\frac{aa^T}{a^Ta}$，显而易见，向量 $b$ 乘以相应的投影矩阵可以得到对应空间上的投影。在这个例子中，矩阵 $P$ 的列空间即为直线 $A$，即 $C(P) = A$。\n",
     "\n",
@@ -79,7 +79,7 @@
     "\n",
     "因为 $p = A\\hat{x}$，所以有 $p = A(A^TA)^{-1}A^Tb$，则 $P = A(A^TA)^{-1}A^T$，当然前提是矩阵 $(A^TA)$ 可逆的情况下，因为当 $(A^TA)$ 不可逆时，说明矩阵 $A$ 的列向量不是线性无关的，即行列不满秩的情况。在[第八讲](http://nbviewer.jupyter.org/github/JeraKrs/Notes/blob/master/Linear-algebra/Lecture08.ipynb)中讨论的方程可解性，行满秩的情况是一定有解，而列满秩时，$(A^TA)$ 可逆，所以当方程组无解时，可以通过投影求得近似解。那么在行列不满秩时，是不能通过投影求近似解的。\n",
     "\n",
-    "需要注意的是 $P=A(A^TA)^{−1}$ 是不能继续化简为 $P=AA^{-1}(A^T)^{-1}A^T = I$ 的，因为这里的 $A$ 并不是一个可逆方阵。或者说，如果 $A$ 是一个 $n$ 阶可逆方阵，则 $A$ 的列空间是整个 $\\mathbb{R}^n$ 空间，于是 $b$ 原本就落在空间内。\n",
+    "需要注意的是 $P=A(A^TA)^{−1}$ 是不能继续化简为 $P=AA^{-1}(A^T)^{-1}A^T = I$ 的，因为这里的 $A$ 并不是一个可逆方阵。或者说，如果 $A$ 是一个 $n$ 阶可逆方阵，则 $A$ 的列空间就是整个 $\\mathbb{R}^n$ 空间，那么 $b$ 原本就落在空间内。\n",
     "\n",
     "现在讨论矩阵 $P$ 是否满足投影矩阵的两个性质：\n",
     "* $P^T = (A(A^TA)^{-1}A^T)^T = A(A^TA)^{-1}A^T = P$\n",
