--- a/Linear-algebra/Lecture17.ipynb
+++ b/Linear-algebra/Lecture17.ipynb
@@ -15,7 +15,7 @@
     "* $Q^TQ = I$\n",
     "\n",
     "下面给出几个标准正交矩阵的例子：\n",
-    "1. $Q = \\begin{bmatrix} 0 & 0 & 1 \\\\ 1 & 0 & 0 \\\\ 0 & 1 & 0 \\end{bmatrix}$，且 $Q^TQ = I$\n",
+    "1. $Q = \\begin{bmatrix} 0 & 0 & 1 \\\\ 1 & 0 & 0 \\\\ 0 & 1 & 0 \\end{bmatrix}$\n",
     "2. $Q = \\begin{bmatrix} \\cos\\theta & -\\sin\\theta \\\\ \\sin\\theta & \\cos\\theta \\end{bmatrix}$\n",
     "3. $A = \\begin{bmatrix} 1 & 1 \\\\ 1 & -1 \\end{bmatrix}$，则 $Q = \\frac{1}{\\sqrt{2}}\\begin{bmatrix} 1 & 1 \\\\ 1 & -1 \\end{bmatrix}$\n",
     "\n",
@@ -45,8 +45,17 @@
     "\n",
     "举个例子：$a = \\begin{bmatrix} 1 \\\\ 1 \\\\ 1 \\end{bmatrix}, b = \\begin{bmatrix} 1 \\\\ 0 \\\\ 2 \\end{bmatrix}$，通过求解得 $q_1 = \\begin{bmatrix}1/\\sqrt{3} \\\\ 1/\\sqrt{3} \\\\ 1/\\sqrt{3} \\end{bmatrix}, q_2 = \\begin{bmatrix} 0 \\\\ -1/\\sqrt{2} \\\\ 1/\\sqrt{2} \\end{bmatrix}$。不难发现正交化后的矩阵，其列空间并没有发生变化。\n",
     "\n",
-    "类似于消元中 $A = LU$，我们同样可以通过矩阵表达正交化的过程，即 $A = QR$。设有矩阵 $A = \\begin{bmatrix}a_1 & a_2 \\end{bmatrix}$，有 $R = \\begin{bmatrix} a_1^Tq_1 & a_2^Tq_2 \\\\ a_1^Tq_2 & a_2^Tq_2\\end{bmatrix}$。注意因为Gram-Schmidt正交化总是使得$a_1\\bot q_2$，后来构造的向量总是正交于先前的向量。所以这个$R$矩阵是一个上三角矩阵。"
+    "类似于消元中 $A = LU$，我们同样可以通过矩阵表达正交化的过程，即 $A = QR$。设有矩阵 $A = \\begin{bmatrix}a_1 & a_2 \\end{bmatrix}$，有 $R = \\begin{bmatrix} a_1^Tq_1 & a_2^Tq_2 \\\\ a_1^Tq_2 & a_2^Tq_2\\end{bmatrix}$。注意因为Gram-Schmidt正交化总是使得$a_1\\bot q_2$，后来构造的向量总是正交于先前的向量。所以这个 $R$ 矩阵是一个上三角矩阵。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
