--- a/Linear-algebra/Lecture18.ipynb
+++ b/Linear-algebra/Lecture18.ipynb
@@ -15,28 +15,28 @@
     "\n",
     "3. **性质三**：矩阵的行列式满足一定的线性组合，$\\begin{vmatrix} ta & tb \\\\ c & d\\end{vmatrix} = t\\begin{vmatrix} a & b \\\\ c & d \\end{vmatrix}, \\begin{vmatrix} a + a' & b + b' \\\\ c & d\\end{vmatrix} = \\begin{vmatrix} a & b \\\\ c & d \\end{vmatrix} + \\begin{vmatrix} a' & b' \\\\ c & d \\end{vmatrix}$\n",
     "\n",
-    "4. **性质四**：如果矩阵中有两行相等，那么行列式一定为零。证明，根据**性质二**，如果交换两个相等行，行列式会变成相反数，但是矩阵却没变，则 $detA = -detA \\Rightarrow detA = 0$。\n",
+    "4. **性质四**：如果矩阵中有两行相等，那么行列式一定为零。证明，如果交换两个相等行，行列式会变成相反数（**性质二**），但是矩阵却没变，则 $detA = -detA \\Rightarrow detA = 0$。\n",
     "\n",
     "5. **性质五**：从 $row_i$ 中减去 $l * row_j$ 后，矩阵的行列式不变。\n",
     "    \n",
     "    证明，$\\begin{vmatrix}a & b \\\\ c - la & d - lb \\end{vmatrix} \\Rightarrow \\begin{vmatrix} a & b \\\\ c & d \\end{vmatrix} - l\\begin{vmatrix}a & b \\\\ a & b\\end{vmatrix} \\xrightarrow{性质四} \\begin{vmatrix} a & b \\\\ c & d \\end{vmatrix}$\n",
     "    \n",
-    "6. **性质六**：如果矩阵中有一行全为零，那么矩阵的行列式为零。证明，根据**性质三** $5detA = \\begin{vmatrix}0 & 0 \\\\ a & b \\end{vmatrix} = \\begin{vmatrix}0 & 0 \\\\ a & b \\end{vmatrix} = detA \\Rightarrow detA = 0$。\n",
+    "6. **性质六**：如果矩阵中有一行全为零，那么矩阵的行列式为零。证明，根据**性质三**有 $k * detA = \\begin{vmatrix}k * 0 & k * 0 \\\\ a & b \\end{vmatrix} = \\begin{vmatrix}0 & 0 \\\\ a & b \\end{vmatrix} = detA \\Rightarrow detA = 0$。\n",
     "\n",
-    "7. **性质七**：三角行列式矩阵的行列式等于对角线的积。\n",
+    "7. **性质七**：三角行矩阵的行列式等于对角线的积。\n",
     "\n",
     "    证明：分两种情况，如果主元（对角线上的元素）均非零，那么上三角矩阵可以转化成对角线矩阵 $ U = D \\xrightarrow{性质三} \\sum^n_{i=1}I$；如果主元中有元素为零，那么矩阵中一定有一行元素全为零，根据**性质四**，矩阵的行列式为零。\n",
     "    \n",
     "8. **性质八**：奇异矩阵的行列式一定为零；非奇异矩阵的行列式一定不为零。证明：非奇异矩阵可以化简为对角线矩阵。\n",
     "9. **性质九**：\n",
     "    * $detAB = detA * detB$\n",
-    "    * $detA^{-1} = detA\n",
+    "    * $detA^{-1} = detA$\n",
     "    * $detA^2 = (detA)^2$\n",
     "    * $det2A = 2^ndetA$\n",
     "    \n",
     "10. **性质十**：置换矩阵的行列式等于原矩阵的行列式，即 $detA^T = detA$。\n",
     "\n",
-    "    证明：矩阵 $A$ 可以分解为三角矩阵 $U$ 和矩阵 $L$，|U^T| = |U|，$|U^TL^T| = |LU| \\Rightarrow |U^T||L^T| = |L||U|$。"
+    "    证明：矩阵 $A$ 可以分解为三角矩阵 $U$ 和矩阵 $L$，$|U^T| = |U|$，$|U^TL^T| = |LU| \\Rightarrow |U^T||L^T| = |L||U|$。"
    ]
   },
   {
