--- a/Linear-algebra/Lecture19.ipynb
+++ b/Linear-algebra/Lecture19.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "根据行列式的性质，可以推导二阶矩阵的行列式：$$\\begin{vmatrix}a & b \\\\ c & d \\end{vmatrix} = \\begin{vmatrix}a & 0 \\\\ c & d \\end{vmatrix} + \\begin{vmatrix}0 & b \\\\ c & d \\end{vmatrix} = \\begin{vmatrix}a & 0 \\\\ c & 0 \\end{vmatrix} + \\begin{vmatrix}a & 0 \\\\ 0 & d \\end{vmatrix} + \\begin{vmatrix}0 & b \\\\ 0 & d \\end{vmatrix} + \\begin{vmatrix}0 & b \\\\ c & 0 \\end{vmatrix} = \\begin{vmatrix}a & 0 \\\\ 0 & d \\end{vmatrix} - \\begin{vmatrix}c & 0 \\\\ 0 & b \\end{vmatrix} = ad - bc$$\n",
     "\n",
-    "同理，可以推导三阶矩阵的行列式：$$\\begin{vmatrix}a_{11} & a_{12} & a_{13} \\\\ a_{21} & a_{22} & a_{23} \\\\ a_{31} & a_{32} & a_{33}\\end{vmatrix} = \\begin{vmatrix}a_{11} & 0 & 0 \\\\ 0 & a_{22} & 0 \\\\ 0 & 0 & a_{33}\\end{vmatrix} + \\begin{vmatrix}a_{11} & 0 & 0 \\\\ 0 & 0 & a_{23} \\\\ 0 & a_{32} & 0\\end{vmatrix} + \\begin{vmatrix}0 & a_{12} & 0 \\\\ a_{21} & 0 & 0 \\\\ 0 & 0 & a_{33}\\end{vmatrix} + \\begin{vmatrix}0 & a_{12} & 0 \\\\ 0 & 0 & a_{23} \\\\ a_{31} & 0 & 0\\end{vmatrix} + \\begin{vmatrix}0 & 0 & a_{13} \\\\ 0 & a_{22} & 0 \\\\ a_{31} & 0 & 0\\end{vmatrix} + \\begin{vmatrix}0 & 0 & a_{13} \\\\ a_{21} & 0 & 0 \\\\ 0 & 0 & a_{33}\\end{vmatrix} = a_{11}a_{22}a_{33} + a_{12}a_{23}a_{31} + a_{13}a_{21}a_{32} - a_{11}a_{23}a_{32} - a_{12}a_{21}a_{33} - a_{13}a_{22}a_{31}$$\n",
+    "同理，可以推导三阶矩阵的行列式：$$\\begin{vmatrix}a_{11} & a_{12} & a_{13} \\\\ a_{21} & a_{22} & a_{23} \\\\ a_{31} & a_{32} & a_{33}\\end{vmatrix} = \\begin{vmatrix}a_{11} & 0 & 0 \\\\ 0 & a_{22} & 0 \\\\ 0 & 0 & a_{33}\\end{vmatrix} + \\begin{vmatrix}a_{11} & 0 & 0 \\\\ 0 & 0 & a_{23} \\\\ 0 & a_{32} & 0\\end{vmatrix} + \\begin{vmatrix}0 & a_{12} & 0 \\\\ a_{21} & 0 & 0 \\\\ 0 & 0 & a_{33}\\end{vmatrix} + \\begin{vmatrix}0 & a_{12} & 0 \\\\ 0 & 0 & a_{23} \\\\ a_{31} & 0 & 0\\end{vmatrix} + \\begin{vmatrix}0 & 0 & a_{13} \\\\ 0 & a_{22} & 0 \\\\ a_{31} & 0 & 0\\end{vmatrix} + \\begin{vmatrix}0 & 0 & a_{13} \\\\ a_{21} & 0 & 0 \\\\ 0 & a_{32} & 0 \\end{vmatrix} = a_{11}a_{22}a_{33} + a_{12}a_{23}a_{31} + a_{13}a_{21}a_{32} - a_{11}a_{23}a_{32} - a_{12}a_{21}a_{33} - a_{13}a_{22}a_{31}$$\n",
     "\n",
-    "现给出行列式的通用公式：$\\det(A)=\\sum _{\\sigma \\in S_{n}}\\operatorname {sgn}(\\sigma )\\prod _{i=1}^{n}a_{i,\\sigma (i)}$，其中 σ的逆序共有偶数个，则 $sgn(\\sigma) = 1$，如果共有奇数个，则 $sgn(\\sigma) =-1$。"
+    "现给出行列式的通用公式：$\\det(A)=\\sum _{\\sigma \\in S_{n}}\\operatorname {sgn}(\\sigma )\\prod _{i=1}^{n}a_{i,\\sigma (i)}$，其中 $\\sigma$ 的逆序共有偶数个，则 $sgn(\\sigma) = 1$，如果逆序共有奇数个，则 $sgn(\\sigma) =-1$。"
    ]
   },
   {
@@ -27,7 +27,7 @@
     "\n",
     "$$detA = a_{11}(a_{22}a_{33} - a_{23}a_{32}) - a_{12}(a_{21}a_{33} - a_{23}a_{31}) + a_{13}(a_{21}a_{32} - a_{22}a_{31})$$\n",
     "\n",
-    "现在给出 $a_{ij}$ 的代数余子式：将原行列式的第 $i$ 行与第 $j$ 列抹去后得到的 $n−1$ 阶行列式记为 $C_{ij}$，$i+j$ 为偶时时取加，$i+j$ 为奇时取减。"
+    "现在给出 $a_{ij}$ 的代数余子式：将原行列式的第 $i$ 行与第 $j$ 列抹去后得到的 $n−1$ 阶行列式记为 $C_{ij}$，$i+j$ 为偶数时取加，$i+j$ 为奇数时取减。"
    ]
   },
   {
