LA-fixed lecture21-25

--- a/Linear-algebra/Lecture22.ipynb
+++ b/Linear-algebra/Lecture22.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "定理：如果矩阵所有的 $\\lambda < 1$，那么当 $k \\rightarrow \\infty$ 时，$A^k \\rightarrow 0$\n",
     "\n",
-    "注意：以上所有的结论都建立在矩阵没有相等的特征向量。"
+    "注意：以上所有的结论都建立在矩阵没有相等的特征值。"
    ]
   },
   {
@@ -37,11 +37,11 @@
    "source": [
     "## 求解$u_{k+1} = Au_k$\n",
     "\n",
-    "假设有序列，首项为 $u_0$，以后每项满足 $u_{k+1} = Au_{k}$。首先将 $u_0$ 展开为矩阵 $A$ 特征向量的线性组合，即 $u_0 = c_1x_1 + c_2x_2 + \\dots + c_nx_n$，其中 $x_i$ 为矩阵 $A$ 的特征向量。那么 $Au_0 = c_1\\lambda_1x_1 + \\dots + c_n\\lambda_nx_n = \\Lambda Sc$，推广到 $k$ 次幂有 $A^ku_0 = c_1\\lambda_1^kx_1 + \\dots + c_n\\lambda_n^kx_n = \\Lambda^kSc$。\n",
+    "假设有序列，首项为 $u_0$，序列每项满足 $u_{k+1} = Au_{k}$。首先将 $u_0$ 展开为矩阵 $A$ 特征向量的线性组合，即 $u_0 = c_1x_1 + c_2x_2 + \\dots + c_nx_n$，其中 $x_i$ 为矩阵 $A$ 的特征向量。那么 $Au_0 = c_1\\lambda_1x_1 + \\dots + c_n\\lambda_nx_n = \\Lambda Sc$，推广到 $k$ 次幂有 $A^ku_0 = c_1\\lambda_1^kx_1 + \\dots + c_n\\lambda_n^kx_n = \\Lambda^kSc$。\n",
     "\n",
-    "例题：以斐波那契数列为列，数列首项 $F_0 = 0$，第二项 $F_1 = 1$，而第 $k$ 项满足 $F_k = F_{k-2} + F_{k-1}$，那么现在设 $$u_k = \\begin{bmatrix}F_{k+1} \\\\ F_k \\end{bmatrix}, u_{k+1} = \\begin{bmatrix} F_{k+2} \\\\ F_{k+1} \\end{bmatrix} = \\begin{bmatrix} F_{k+1} + F_{k} \\\\ F_{k}\\end{bmatrix}$$\n",
+    "例题：以斐波那契数列为例，数列首项 $F_0 = 0$，第二项 $F_1 = 1$，而第 $k$ 项满足 $F_k = F_{k-2} + F_{k-1}$，那么现在设 $$u_k = \\begin{bmatrix}F_{k+1} \\\\ F_k \\end{bmatrix}, u_{k+1} = \\begin{bmatrix} F_{k+2} \\\\ F_{k+1} \\end{bmatrix} = \\begin{bmatrix} F_{k+1} + F_{k} \\\\ F_{k}\\end{bmatrix}$$\n",
     "\n",
-    "因此有 $A = \\begin{bmatrix} 1 & 1 \\\\ 1 & 0\\end{bmatrix}$，其中特征值有 $\\lambda_1 = \\frac{1 + \\sqrt{5}}{2}, \\lambda_2 = \\frac{1 - \\sqrt{5}}{2}$，特征向量 $x_1 = \\begin{bmatrix} \\frac{1 + \\sqrt{5}}{2} \\\\ 1\\end{bmatrix}, x_2 = \\begin{bmatrix} \\frac{1 - \\sqrt{5}}{2} \\\\ 1\\end{bmatrix}$。然后，我们需要将 $u_0$ 分解为 $c_1x_1 + c_2x_2 = \\frac{\\sqrt{5}}{5}\\frac{1 + \\sqrt{5}}{2} - \\frac{\\sqrt{5}}{5}\\frac{1 - \\sqrt{5}}{2}$。通解为 $u_k=c_1\\lambda_1^kx_1+c_2\\lambda_2^kx_2$。"
+    "因此有 $A = \\begin{bmatrix} 1 & 1 \\\\ 1 & 0\\end{bmatrix}$，其中特征值有 $\\lambda_1 = \\frac{1 + \\sqrt{5}}{2}, \\lambda_2 = \\frac{1 - \\sqrt{5}}{2}$，特征向量 $x_1 = \\begin{bmatrix} \\frac{1 + \\sqrt{5}}{2} \\\\ 1\\end{bmatrix}, x_2 = \\begin{bmatrix} \\frac{1 - \\sqrt{5}}{2} \\\\ 1\\end{bmatrix}$。然后，我们需要将 $u_0$ 分解为 $c_1x_1 + c_2x_2 = \\frac{\\sqrt{5}}{5}\\frac{1 + \\sqrt{5}}{2} - \\frac{\\sqrt{5}}{5}\\frac{1 - \\sqrt{5}}{2}$。通解形式有 $u_k=c_1\\lambda_1^kx_1+c_2\\lambda_2^kx_2$。"
    ]
   },
   {
