--- a/Linear-algebra/Lecture23.ipynb
+++ b/Linear-algebra/Lecture23.ipynb
@@ -8,11 +8,11 @@
     "\n",
     "## 微分方程$\\frac{du}{dt} = Au$\n",
     "\n",
-    "现有一阶（First-order）微分方程组：$\\left\\{\\begin{matrix} \\frac{du_1}{dt} & = & -u_1 & + 2u_2\\\\  \\frac{du_2}{dt} & = & u_1 & -2u_2 \\end{matrix}\\right.$，其中初始状态 $u(0) = \\begin{bmatrix}u_1 \\\\ u_2 \\end{bmatrix} = \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix}$，我们需要求解方程的一般形式 $u(t)$。\n",
+    "现有一阶（First-order）微分方程组：$\\left\\{\\begin{matrix} \\frac{du_1}{dt} & = & -u_1 & + 2u_2\\\\  \\frac{du_2}{dt} & = & u_1 & -2u_2 \\end{matrix}\\right.$，其中初始状态 $u(0) = \\begin{bmatrix}u_1 \\\\ u_2 \\end{bmatrix} = \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix}$，现在我们需要求解方程的一般形式 $u(t)$。\n",
     "\n",
-    "首先，通过微分方程组可以得到系数矩阵 $A = \\begin{bmatrix} -1 & 2 \\\\ 1 & -2 \\end{bmatrix}$，并且该矩阵的特征值为 $\\left\\{\\begin{matrix} \\lambda_1 & = & 0\\\\  \\lambda_2 & = & -3 \\end{matrix}\\right.$，特征向量为 $\\left\\{\\begin{matrix} x_1 & = & \\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix}  \\\\  x_2 & = & \\begin{bmatrix} 1 \\\\ -1 \\end{bmatrix} \\end{matrix}\\right.$。此时，解可以写成 $u(t) = c_1 e^{\\lambda_1 t} x_1 + c_2 e^{\\lambda_2 t}x_2$，这里可以进行检验，取 $u = \\lambda_1 e^{\\lambda_1 t}x_1$，则有 $\\frac{du}{dt} = \\lambda_1 e^{\\lambda_1 t}x_1 = A e^{\\lambda_1 t}x_1 = Au$。\n",
+    "首先，通过微分方程组可以得到系数矩阵 $A = \\begin{bmatrix} -1 & 2 \\\\ 1 & -2 \\end{bmatrix}$，并且该矩阵的特征值为 $\\left\\{\\begin{matrix} \\lambda_1 & = & 0\\\\  \\lambda_2 & = & -3 \\end{matrix}\\right.$，特征向量为 $\\left\\{\\begin{matrix} x_1 & = & \\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix}  \\\\  x_2 & = & \\begin{bmatrix} 1 \\\\ -1 \\end{bmatrix} \\end{matrix}\\right.$。此时，解可以写成 $u(t) = c_1 e^{\\lambda_1 t} x_1 + c_2 e^{\\lambda_2 t}x_2$，这里可以进行检验，取 $u = \\lambda_1 e^{\\lambda_1 t}x_1$，有 $\\frac{du}{dt} = \\lambda_1 e^{\\lambda_1 t}x_1 = A e^{\\lambda_1 t}x_1 = Au$。\n",
     "\n",
-    "接下来，通过 $u(0)$ 解出 $c_1 = \\frac{1}{3}, c_2=\\frac{1}{3}$。于是最终的解为 $u(t) = \\frac{1}{3}\\begin{bmatrix}2 \\\\ 1\\end{bmatrix} + \\frac{1}{3}e^{-3t}\\begin{bmatrix}1 \\\\ -1\\end{bmatrix}$，并且方程有一个稳定的状态 $u(\\infty) = \\frac{1}{3}\\begin{bmatrix}2 \\\\ 1\\end{bmatrix}$，因为当 $t \\rightarrow \\infty$ 时，$e^{-3t} \\rightarrow 0$。\n",
+    "接下来，通过 $u(0)$ 解出 $c_1 = \\frac{1}{3}, c_2=\\frac{1}{3}$。于是最终的解形式为 $u(t) = \\frac{1}{3}\\begin{bmatrix}2 \\\\ 1\\end{bmatrix} + \\frac{1}{3}e^{-3t}\\begin{bmatrix}1 \\\\ -1\\end{bmatrix}$，并且方程有一个稳定的状态 $u(\\infty) = \\frac{1}{3}\\begin{bmatrix}2 \\\\ 1\\end{bmatrix}$，因为当 $t \\rightarrow \\infty$ 时，$e^{-3t} \\rightarrow 0$。\n",
     "\n",
     "这里引入方程趋势和特征向之间的关系：\n",
     "* 稳定态（Stability）：方程的值最终会趋向于 $0$，即 $u(t) \\rightarrow 0$，这就要求 $e^{\\lambda t} \\rightarrow 0$，所以当所有的特征值的实数部分（虚数部分只是噪音）均小于 $0$ 时，方程具有稳定性。\n",
