--- a/Linear-algebra/Lecture24.ipynb
+++ b/Linear-algebra/Lecture24.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "## 傅里叶级数\n",
     "\n",
-    "回顾一下正交向量：假设有一组正交向量 $q_1, q_2, \\dots, d_n$，则向量 $v$ 的展开形式为 $x_1q_1 + x_2q_2 + \\dots + x_nq_n$，如果此时需要得到某个分向量的系数，只需要在等式两边同乘以 $q^T$ 即可，因为 $q^T_iq_j=0,q^2_i=1$。\n",
+    "回顾一下正交向量：假设有一组正交向量 $q_1, q_2, \\dots, q_n$，则向量 $v$ 的展开形式有 $x_1q_1 + x_2q_2 + \\dots + x_nq_n$，如果此时需要得到某个分向量的系数，只需要在等式两边同乘以 $q^T$ 即可，因为 $q^T_iq_j=0,q^2_i=1$。\n",
     "\n",
     "傅里叶级数的展开式：\n",
     "$$f(x) = a_0 + a_1\\cos{x} + b_1\\sin{x} + a_2\\cos(2x) + a_4\\sin(2x) + \\dots $$\n",
@@ -42,7 +42,7 @@
     "傅里叶发现，如同将向量 $v$ 展开到向量空间的一组标准正交基中，在函数空间中也可以做类似的展开。这里需要涉及函数正交，对于向量通常使用向量内积为零判断，而函数为一个连续的值，所以我们需要计算每个位置的点积之后求和，即 \n",
     "$$f^Tg = \\int f(x)g(x)dx$$\n",
     "\n",
-    "我们可以对 $f(x) = \\sin(x), g(x) = \\cos(x)$ 进行检验：$\\int^{2\\pi}{0}\\cos(x)\\sin(x) = \\frac{1}{2}(\\sin(2\\pi) - \\sin(0)) = 0$。最后看 $\\cos⁡(x)$ 项的系数是多少，类似向量，在等式两边同时做 $\\cos(x)$ 的内积，$\\int ^{2\\pi}_{0}f(x)\\cos(x)dx = a_1\\int^{2\\pi}{0}\\cos(x)^2dx \\Rightarrow a_1 = \\frac{1}{\\pi}\\int^{2\\pi}_{0}f(x)\\cos(x)dx$。"
+    "我们可以对 $f(x) = \\sin(x), g(x) = \\cos(x)$ 进行检验：$\\int^{2\\pi}_{0}\\cos(x)\\sin(x) = \\frac{1}{2}(\\sin(2\\pi) - \\sin(0)) = 0$。最后看 $\\cos⁡(x)$ 项的系数是多少，类似向量，在等式两边同时做 $\\cos(x)$ 的内积，$\\int ^{2\\pi}_{0}f(x)\\cos(x)dx = a_1\\int^{2\\pi}_{0}\\cos(x)^2dx \\Rightarrow a_1 = \\frac{1}{\\pi}\\int^{2\\pi}_{0}f(x)\\cos(x)dx$。"
    ]
   },
   {
