--- a/Linear-algebra/Lecture21.ipynb
+++ b/Linear-algebra/Lecture21.ipynb
@@ -15,8 +15,8 @@
     "再来考虑投影矩阵 $P = A(A^TA)^{-1}A^T$，对于向量 $x \\in C(A)$ 有 $Px = x$，所以此时特征值为 $1$；对于向量 $x \\perp C(A)$ 有 $Px = 0$，所以此时的特征值为 $0$。\n",
     "\n",
     "特征值的两个特性：\n",
-    "* 矩阵所有特征值的和等于矩阵对角线元素的和，所以我们也称对角线元素为矩阵的迹（Trace）\n",
-    "* 矩阵所有特征值的积等于矩阵的行列式\n"
+    "* 矩阵所有特征值的和等于矩阵对角线元素的和，所以我们也称对角线元素的和为矩阵的迹（Trace）\n",
+    "* 矩阵所有特征值的积等于矩阵的行列式"
    ]
   },
   {
@@ -25,11 +25,11 @@
    "source": [
     "## 求解 $Ax = \\lambda x$\n",
     "\n",
-    "方程 $Ax=\\lambda x$，有两个未知数 $\\lambda, x$。首先重写方程 $(A - \\lambda I)x = 0$，如果而如果方程有解，则矩阵 $A - \\lambda I$ 一定是一个奇异矩阵，而奇异矩阵的行列式等于零，所以有 $det(A - \\lambda I)x = 0$，此时方程中没有变量 $x$，可以解出特征值，该方程也称**特征方程**（Characteristic Equation）。有了特征值之后，回代可解出特征方程。\n",
+    "方程 $Ax=\\lambda x$，有两个未知数 $\\lambda, x$。首先重写方程为 $(A - \\lambda I)x = 0$，如果方程有解，则矩阵 $A - \\lambda I$ 一定是一个奇异矩阵，而奇异矩阵的行列式等于零，所以有 $det(A - \\lambda I)x = 0$，此时方程中没有变量 $x$，可以解出特征值，该方程也称**特征方程**（Characteristic Equation）。有了特征值之后，回代可解出特征方程。\n",
     "\n",
     "例子：有矩阵 $A = \\begin{bmatrix}3 & 1 \\\\ 1 & 3 \\end{bmatrix}$，需要解出特征值和特征向量。\n",
     "\n",
-    "$A - \\lambda I = \\begin{bmatrix}3-\\lambda & 1 \\\\ 1 & 3 - \\lambda \\end{bmatrix}$，因为该矩阵的行列为零，所以有 $3 - \\lambda)^2 - 1 = 0 \\Rightarrow (\\lambda - 4)(\\lambda - 2) = 0 \\Rightarrow \\left\\{\\begin{matrix} \\lambda_1 & = & 4 \\\\  \\lambda_2 & = & 2 \\end{matrix}\\right., \\left\\{\\begin{matrix} x_1 & = & \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} \\\\  x_2 & = & \\begin{bmatrix} -1 \\\\ 1 \\end{bmatrix} \\end{matrix}\\right.$\n",
+    "$A - \\lambda I = \\begin{bmatrix}3-\\lambda & 1 \\\\ 1 & 3 - \\lambda \\end{bmatrix}$，因为该矩阵的行列式为零，所以有 $3 - \\lambda)^2 - 1 = 0 \\Rightarrow (\\lambda - 4)(\\lambda - 2) = 0 \\Rightarrow \\left\\{\\begin{matrix} \\lambda_1 & = & 4 \\\\  \\lambda_2 & = & 2 \\end{matrix}\\right., \\left\\{\\begin{matrix} x_1 & = & \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} \\\\  x_2 & = & \\begin{bmatrix} -1 \\\\ 1 \\end{bmatrix} \\end{matrix}\\right.$\n",
     "\n",
     "这里提一个错误的结论，假设有矩阵 $A, B$，它们分别有特征向量 $\\lambda_a, \\lambda_b$，那么 $Ax = \\lambda_a x, Bx = \\lambda_b$，所以 $Ax + Bx = \\lambda_a x + \\lambda_b x = (\\lambda_a + \\lambda_b)x$ ？ 不是的，因为矩阵 $A, B$ 的特征向量是不同的，即 $x_a ≠ x_b$。\n",
     "\n",
